fix & style: added outgoing icons for header links and spacing before the word to create a wider solid background. Created new logo with a 28px size and in IBM Plex mono.

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -18,19 +18,20 @@
 }
 
 .subtitle-format {
-  padding-top: 10px;
+  padding-top: 3px;
 }
 
 .text-background {
   background-color: #313131;
   color: #ffc97c;
-  border-radius: 2px;
-  height: 50px;
-  width: 100px;
-
+  border-radius: 4px;
   &:hover {
     text-decoration: underline;
   }
+}
+
+.text-background::before {
+  content: "\00a0 ";
 }
 
 .download-cv {
